@@ -108,14 +108,14 @@ public class PlainTextHighlighter {
                                     offsets = new ArrayList<>();
 
 
-                                stream.restoreState(stateList.get(0));
+                                stream.restoreState(stateList.getFirst());
                                 int start = stream.getAttribute(OffsetAttribute.class).startOffset();
                                 stream.restoreState(stateList.get(terms.length - 1));
                                 int end = stream.getAttribute(OffsetAttribute.class).endOffset();
                                 offsets.add(new Offset(start, end));
 
                                 //restore state as before
-                                stream.restoreState(stateList.get(stateList.size() - 1));
+                                stream.restoreState(stateList.getLast());
                             }
                         }
                     } else {
